<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.favmovies.presentation.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.favmovies.presentation.view.SearchMovieFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_dashboard_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.favmovies.presentation.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.favmovies.presentation.view.MovieDetailsFragment"
        android:label="MovieDetailsFragment">
        <argument
            android:name="imdbId"
            app:argType="string"
            android:defaultValue="0"/>
    </fragment>
</navigation>